test/files/events-exp-lang-neg/unbound-parameters.check
unbound-parameters.scala:6: error: ValDef not found
  evt e2(x: Int, y: Int) = e1(a,y)
                              ^
unbound-parameters.scala:7: error: ValDef not found
  evt e3(x: Int, y: Int) = e1(x,b)
                                ^
two errors found
